# llms-txt-registry

./: .browser-echo-mcp.json  .codefetchignore  .gitignore  GitMCP-usage-example.md  README.md  lmstxt-pyproject.toml.md  package.json  prompts.md  pyproject.toml  sources.json  strategist-questions-oracle-pack-2025-12-31.state.json  todo-lmstxt.md
.archived/: Improving MCP Process.md
.ck/: manifest.json  package.json.ck  pyproject.toml.ck  requirements.txt.ck  todo-lmstxt.md.ck
.ck/codefetch/: src-all.md.ck  src-docs.md.ck  src.md.ck
.ck/llms_txt_registry.egg-info/: PKG-INFO.ck  SOURCES.txt.ck  dependency_links.txt.ck  entry_points.txt.ck  requires.txt.ck  top_level.txt.ck
.github/workflows/: lint.yml
.taskmaster/: state.json
.taskmaster/docs/: PRD.md
.taskmaster/reports/: task-complexity-report.json
assistant-ui/: llms-full.txt
codefetch/: src-all.md  src-docs.md  src.md
docs/: improve-mcp-process.md  oracle-strategist-commands-2025-12-30.md  strategist-questions-oracle-pack-2025-12-31.md
hi-ai/: hi-ai_MCP_usage-guide.txt
llms_txt_registry.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
lms-llmsTxt/: lms-llmstxt-llms-full.txt  lms-llmstxt-llms.txt
mlflow/: mlflow-llms-ctx.txt  mlflow-llms-full.txt  mlflow-llms.txt
prompts/: prompts-llms-full.txt
repo-cartographer/: repo-cartographer-llms-full.txt  repo-cartographer-llms.txt
scripts/: populate_manifest.py  refresh.py  setup_hooks.sh
tests/: test_index.py  test_ingest.py  test_registry_config.py  test_reporting.py  test_runner.py
threejs/: three.js-llms.txt
(+80 files in other folders)
