[project]
name = "llms-txt-registry"
version = "0.1.0"
description = "Centralized registry and orchestrator for llms.txt artifacts"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "pydantic>=2.0",
    "requests>=2.31.0",
    "lmstudio-llmstxt-generator"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-mock",
]

[project.scripts]
llms-registry = "scripts.refresh:main"

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "scripts*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-mock",
]
